# chat-pdf

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.prod.yml  compose.yml  init.sql  pyproject.toml
.chainlit/: config.toml
public/: main.css  theme.json
src/rag/: __init__.py  __main__.py  app.py  cli.py  interface.py  pipeline.py  routes.py
tests/: conftest.py  test_acceptation.py
